# metacast

./: .flake8  .gitignore  Dockerfile  Makefile  README  README.md  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
metacast/: io.py  models.py  structure.py  utils.py
scripts/: metacast_convert  metacast_timeshift
tests/: conftest.py  run_all.py  sample_1.js  sample_1.json  sample_1.xml  sample_2.js  sample_2.json  sample_2.xml  sample_3.js  sample_3.json  sample_3.xml  test_base.py  test_compat.py  test_dump.py  test_formats.py  test_full.py  test_index.py
tests/samples/: sample_2.1.json  sample_2.1.xml  sample_2.1_updated.json  sample_2.1_updated.xml  sample_2.6_A.json  sample_2.6_A.xml  sample_2.6_A_updated.json  sample_2.6_A_updated.xml  sample_2.6_B.json  sample_2.6_B.xml  sample_2.6_B_updated.json  sample_2.6_B_updated.xml
