[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "metacast"
description = "Rich media metadata handling library."
dynamic = ["version"]
authors = [{name = "UbiCast"}]
license = "LGPL-3.0"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
  "lxml",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "mypy",
  "pytest",
  "pytest-cov",
  "vulture",
]

[project.urls]
Repository = "https://github.com/UbiCastTeam/metacast"

[tool.setuptools]
packages = ["metacast"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "metacast.__version__"}

[tool.coverage.run]
source_dirs = ["metacast"]
